--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,14 +6,29 @@
     <data>
 
     </data>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/dog_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity">
-
-
-
     </androidx.recyclerview.widget.RecyclerView>
+
+        <ProgressBar
+         android:layout_width="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="gone"
+
+            android:indeterminate="true"
+            android:id="@+id/loading_wheel"
+        android:layout_height="wrap_content"
+    >
+
+
+    </ProgressBar>
+    </FrameLayout>
+
 </layout>
