--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,29 +6,48 @@
     <data>
 
     </data>
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/dog_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity">
-    </androidx.recyclerview.widget.RecyclerView>
-
-        <ProgressBar
-         android:layout_width="wrap_content"
-            android:layout_gravity="center"
-            android:visibility="gone"
-
-            android:indeterminate="true"
-            android:id="@+id/loading_wheel"
-        android:layout_height="wrap_content"
-    >
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:id="@+id/take_photo"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/ic_baseline_photo_camera_24"
+            android:layout_margin="10dp"
+            android:layout_height="wrap_content">
 
 
-    </ProgressBar>
-    </FrameLayout>
+        </com.google.android.material.floatingactionbutton.FloatingActionButton>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:id="@+id/dog_list_fav"
+            android:layout_toStartOf="@id/take_photo"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/ic_baseline_favorite_24"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
+            android:layout_height="wrap_content">
+
+
+        </com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:id="@+id/settings_fab"
+            android:layout_toEndOf="@id/take_photo"
+            android:layout_alignParentBottom="true"
+            android:src="@drawable/ic_baseline_settings_24"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="10dp"
+            android:layout_height="wrap_content">
+
+
+        </com.google.android.material.floatingactionbutton.FloatingActionButton>
+
+    </RelativeLayout>
 
 </layout>
